fixed floaty bar to have a z-index so it shows up above list view always, and reduced width to account for border

--- a/modules/ext.pageTriage.views/ext.pageTriage.listControlNav.css
+++ b/modules/ext.pageTriage.views/ext.pageTriage.listControlNav.css
@@ -14,6 +14,7 @@
 	top: 0;
 	left: 160px;
 	margin-left: 16px;
+	z-index: 1;
 }
 
 .mwe-pt-control-label {
